--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ relative_permalinks: true
 
 permalink:     date
 paginate_path: 'page:num'
-paginate:      nil
+paginate:      1
 
 markdown:      kramdown
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
@@ -27,8 +27,6 @@ textile_ext:   textile
 excerpt_separator: "\n\n"
 
 safe:        false
-watch:       false    # deprecated
-server:      false    # deprecated
 host:        0.0.0.0
 port:        4000
 baseurl:     ""
