Cleanup content; Update config

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 source:      .
 destination: ./_site
 plugins_dir: ./_plugins
-layouts:     ./_layouts
+layouts_dir: ./_layouts
 include:     ['.htaccess']
 exclude:     []
 keep_files:  ['.git','.svn']
-gems:        []
+plugins:     []
 timezone:    America/Chicago
 encoding:    nil
 
@@ -52,7 +52,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
+  enable_coderay: false
 
   coderay:
     coderay_wrap: div
